k8s/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  labels:
    app: database
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
    - name: http
      port: 4000
      targetPort: 4000
